// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with the given expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <_default
      expense={
        Object {
          "amount": 1500,
          "createdAt": 0,
          "description": "Rent",
          "id": "1",
          "note": "",
        }
      }
      key="1"
    />
    <_default
      expense={
        Object {
          "amount": 25550,
          "createdAt": -345600000,
          "description": "Credit card",
          "id": "2",
          "note": "",
        }
      }
      key="2"
    />
    <_default
      expense={
        Object {
          "amount": 5000,
          "createdAt": 345600000,
          "description": "Gas bill",
          "id": "3",
          "note": "",
        }
      }
      key="3"
    />
  </div>
</div>
`;

exports[`should render message when there is no expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;
